infrastructure/production/base/controllers/prometheus/ingress-kube-prometheus-stack-grafana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: pfsense-ca-issuer
    k8s.apisix.apache.org/upstream-scheme: http
    k8s.apisix.apache.org/enable-websocket: true
  labels:
    app.kubernetes.io/instance: kube-prometheus-stack
    app.kubernetes.io/name: grafana
  name: kube-prometheus-stack-grafana
  namespace: prometheus
spec:
  ingressClassName: apisix
  rules:
  - host: grafana.apps.lab.okd.local
    http:
      paths:
      - backend:
          service:
            name: kube-prometheus-stack-grafana
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - grafana.apps.lab.okd.local
    secretName: grafana-general-tls
