infrastructure/production/base/controllers/prometheus/ingress-prometheus-server.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: pfsense-ca-issuer
    k8s.apisix.apache.org/upstream-scheme: http
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/instance: prometheus
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/part-of: prometheus
  name: prometheus-server
  namespace: prometheus
spec:
  ingressClassName: apisix
  rules:
  - host: prometheus.apps.lab.okd.local
    http:
      paths:
      - backend:
          service:
            name: prometheus-server
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - prometheus.apps.lab.okd.local
    secretName: prometheus-server-tls
